unionify/tests/fail/zero_sized_union.rs
use unionify::UnionSize;

#[derive(UnionSize)]
pub enum Foo {
    A,
    B,
}

fn main() {}
